# alpaca-cpp

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  project_report.txt  roadmap.txt
.github/workflows/: ci.yml
cmake/: alpaca-cppConfig.cmake.in
example/: CMakeLists.txt  README.md  broker_get_accounts_example.cpp  broker_sse_example.cpp  crypto_data_example.cpp  crypto_example.cpp  news_screener_example.cpp  option_data_example.cpp  simple_example.cpp  stock_data_example.cpp  trading_example.cpp  watchlist_example.cpp  websocket_example.cpp
include/alpaca/: AlpacaAPI.h  AlpacaAuthAPI.h  AlpacaBrokerAPI.h  AlpacaMarketDataAPI.h  AlpacaMarketDataStream.h  AlpacaTraderAPI.h  AlpacaUpdatesStream.h  alpacaAPI.h
include/alpaca/api/rest/: HTTPClient.h
include/alpaca/api/rest/broker/: AlpacaBrokerAPI.h
include/alpaca/api/rest/trader/: AlpacaTraderAPI.h
include/alpaca/api/sse/: BrokerSSEClient.h
include/alpaca/api/websocket/: AlpacaUpdatesStream.h  WebSocketClient.h
include/alpaca/core/: error.h  types.h  util.h
include/alpaca/model/broker/: brokerAccount.h  brokerAccountActivity.h  brokerAccountDocument.h  brokerAccountTradingDetails.h  brokerAccountTradingLimit.h  brokerInstantFunding.h  common.h  optionsApproval.h  pdtStatus.h
include/alpaca/model/data/: crypto.h  news.h  option_data.h  stock.h
include/alpaca/model/stream/: market_data.h  trade_update.h
include/alpaca/model/trader/: account.h  activity.h  asset.h  calendar.h  clock.h  option.h  order.h  portfolio.h  position.h  treasury.h  wallet.h  watchlist.h
src/: AlpacaAPI.cpp  CMakeLists.txt  alpacaAPI.cpp
src/api/rest/: CMakeLists.txt  HTTPClient.cpp
src/api/sse/: BrokerSSEClient.cpp
src/api/websocket/: AlpacaMarketDataStream.cpp  AlpacaUpdatesStream.cpp  WebSocketClient.cpp
src/auth/: AlpacaAuthAPI.cpp
src/broker/: AlpacaBrokerAPI.cpp
src/core/: CMakeLists.txt  types.cpp
src/marketdata/: AlpacaMarketDataAPI.cpp
src/trader/: AlpacaTraderAPI.cpp  CMakeLists.txt
test/: CMakeLists.txt
test/data/: test_crypto_data.cpp  test_market_data_api.cpp  test_market_data_query_utils.cpp  test_news_data.cpp  test_option_data.cpp  test_stock_data.cpp
test/models/: test_account.cpp  test_account_config.cpp  test_activity.cpp  test_asset.cpp  test_broker_account_trading_details.cpp  test_broker_account_trading_limit.cpp  test_broker_instant_funding.cpp  test_calendar.cpp  test_clock.cpp  test_error.cpp  test_option.cpp  test_order.cpp  test_portfolio.cpp  test_position.cpp  test_stream_models.cpp  test_treasury.cpp  test_wallet.cpp  test_watchlist.cpp
test/trader/: test_trader_api.cpp
